<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PersegiFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_PersegiPanjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persegi_panjang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/panjangPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="panjang"
        app:layout_constraintTop_toBottomOf="@+id/tv_PersegiPanjang"
        tools:layout_editor_absoluteX="78dp" />

    <EditText
        android:id="@+id/LebarPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lebar"
        app:layout_constraintTop_toBottomOf="@+id/panjangPP"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_hitungPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hitung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LebarPP" />

    <TextView
        android:id="@+id/hasilPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hasil"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hitungPP" />

    <TextView
        android:id="@+id/luasPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/luas"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hasilPP" />

    <TextView
        android:id="@+id/kelilingPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/keliling"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/luasPP" />

    <TextView
        android:id="@+id/tvLuasPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/luasPP"
        app:layout_constraintTop_toBottomOf="@+id/hasilPP" />

    <TextView
        android:id="@+id/tvKelilingPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kelilingPP"
        app:layout_constraintTop_toBottomOf="@+id/tvLuasPP" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKelilingPP" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>